Fix collection title area broken in collection List at long title show (#588)

--- a/app/components/collections/collections.scss
+++ b/app/components/collections/collections.scss
@@ -89,6 +89,7 @@ $collections-container-width: 793px;
     color: $navy0;
     margin-right: 80px;
     margin-bottom: 9px;
+    word-break: break-all;
   }
 
   .titleBox {
